experiement_output/error_log/nondex-pedroeml-sales-batch-watcher.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task911/wd/NonDex-plugin-test/github.com/pedroeml/sales-batch-watcher/src/main/java/sales/batch/watcher/persistence/dao/factory/DomainModelFactory.java:26: error: illegal start of expression
        return switch (dataType) {
               ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task911/wd/NonDex-plugin-test/github.com/pedroeml/sales-batch-watcher/src/main/java/sales/batch/watcher/persistence/dao/factory/DomainModelFactory.java:27: error: : expected
            case SALESMAN -> this.salesmanStrategy.create(tokens);
                                                                 ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task911/wd/NonDex-plugin-test/github.com/pedroeml/sales-batch-watcher/src/main/java/sales/batch/watcher/persistence/dao/factory/DomainModelFactory.java:28: error: : expected
            case CLIENT -> this.clientStrategy.create(tokens);
                                                             ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task911/wd/NonDex-plugin-test/github.com/pedroeml/sales-batch-watcher/src/main/java/sales/batch/watcher/persistence/dao/factory/DomainModelFactory.java:29: error: : expected
            case SALE -> this.saleStrategy.create(tokens);
                                                         ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task911/wd/NonDex-plugin-test/github.com/pedroeml/sales-batch-watcher/src/main/java/sales/batch/watcher/persistence/dao/factory/DomainModelFactory.java:30: error: : expected
            default -> null;
                   ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task911/wd/NonDex-plugin-test/github.com/pedroeml/sales-batch-watcher/src/main/java/sales/batch/watcher/persistence/dao/factory/DomainModelFactory.java:30: error: illegal start of expression
            default -> null;
                    ^
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 3s
